techwish/css/styles.pcss
:root {
	--banner-color-primary: #eaf3ff;
	--banner-color-text: #323232;
	--banner-color-button: #951b19;
	--banner-color-button-text: #ffffff;
}

/*
 Common rules, mobile-first
 */
.banner {
	&-wrapper {
		background-color: var( --banner-color-primary );
		color: var( --banner-color-text );
		display: flex;
		flex-direction: row;
		flex-wrap: nowrap;
		min-height: 160px;
		text-decoration: none;
		&:hover,
		&:active,
		&:visited {
			color: var( --banner-color-text );
			text-decoration: none;
		}
	}
	&-logo-wrapper {
		flex: 1 1 180px;
		padding: 0 10px;
		text-align: center;
		display: flex;
		align-items: center;
		justify-content: center;
		> img {
			height: 110px;
		}
	}
	&-text {
		&-headline {
			font: bold 16px/19px sans-serif;
			padding: 0 0 10px;
			width: 100%;
		}
		&-content {
			font: 13px/16px sans-serif;
			width: 100%;
		}
		&-wrapper {
			display: flex;
			justify-content: center;
			flex-direction: column;
			flex: 1 1 50%;
			padding: 10px 0;
			white-space: pre-line;
			> span {
				display: inline-block;
			}
		}
	}
	&-image-wrapper {
		display: flex;
		align-items: center;
		flex: 1 1 5%;
		min-width: 125px;
		justify-content: center;
		> img {
			height: 120px;
		}
	}
	&-close {
		position: absolute;
		right: 0.2em;
		top: 0.5em;
		&-button {
			position: relative;
			padding: 0 5px;
			flex: 0 0 auto;
			right: 0;
			top: -3px;
			line-height: 20px;
			font-size: 32px;
			font-weight: bold;
			&:before {
				position: relative;
				content: '\00d7';
				color: var( --banner-color-text );
				float: left;
				height: 100%;
			}
		}
	}
	&-button {
		align-self: flex-start;
		background-color: var( --banner-color-button );
		font-size: 14px;
		padding: 8px;
		border-radius: 3px;
		color: var( --banner-color-button-text );
		margin-top: 10px;
		font-weight: bold;
	}
}

/*
 Tablet and larger devices
 */
@media ( min-width: 1050px ) {
	.banner {
		&-wrapper {
			min-height: 240px;
		}
		&-text {
			&-content {
				font: 16px/22px sans-serif;
			}
			&-headline {
				font: bold 28px/34px sans-serif;
			}
		}
		&-button {
			font-size: 16px;
			padding: 10px;
			margin-top: 20px;
		}
		&-logo-wrapper {
			> img {
				height: 180px;
			}
		}
		&-image-wrapper {
			> img {
				height: 180px;
			}
		}
	}
}

.skin-monobook .banner-wrapper {
	font-size: 140%;
}

